# battleship

./: README.md  package-lock.json  package.json
backend/: Boat.java  Game.java  Player.java  app.js  game.js  game.ts  go.mod  main.go  package-lock.json  package.json  server.js  server.ts
backend/battleship-rs/: Cargo.toml
backend/battleship-rs/src/: client.rs  components.rs  errors.rs  main.rs  ws.rs
backend/battleship-rs/src/components/: board.rs  game.rs  player.rs  room.rs  ship.rs  state.rs
backend/src/main/java/server/: EchoGetHandler.java  EchoHeaderHandler.java  EchoPostHandler.java  RootHandler.java  SocketCommunicator.java
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  communicator.js  communicator.ts  main.js
frontend/src/classes/: boat.ts  player.ts
frontend/src/components/boards/: Console.vue  ControlPanel.vue  OpponentBoard.vue  OwnBoard.vue
src/: App.vue  console.ts  game.ts  main.js
src/assets/: base.css
src/classes/: boat.ts  player.ts
src/components/: OpponentBoard.vue  OrangeBoat.vue  OwnBoard.vue  RedBoat.vue  YellowBoat.vue
src/components/boards/: Console.vue  ControlPanel.vue  OpponentBoard.vue  PlayersInfo.vue
src/components/boats/: FiveBoat.vue
